# loopupward

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  wrangler.jsonc
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/(app)/: layout.tsx
app/admin/: page.tsx
app/login/: page.tsx
app/pricing/: page.tsx
backend/: Cargo.toml  Dockerfile  railway.toml
backend/migrations/: 0001_init.sql  0002_schedules.sql  0003_journal_labels.sql  0004_horizon_period.sql  0005_notes_rich_body.sql  0006_habit_day_notes.sql  0007_day_order.sql  0008_date_horizon.sql  0009_item_trash.sql  0010_routine_steps.sql  0012_routine_windows.sql  0013_currency.sql  0014_admin_premium.sql  0015_list_entries.sql  0016_pulled_today.sql
backend/src/: admin.rs  auth.rs  billing.rs  config.rs  data.rs  error.rs  limits.rs  main.rs  ratelimit.rs
components/: focustimer.tsx  icons.tsx  items.tsx  journal.tsx  markdown.tsx  minicalendar.tsx  progress.tsx  richtext.tsx  shell.tsx  suggestions.tsx  ui.tsx
docs/: book.toml
docs/src/: SUMMARY.md  capture.md  completion.md  example-cascade.md  faq.md  getting-started.md  idea.md  life.md  notes.md  plan.md  reflect.md  routines.md  settings.md  welcome.md
lib/: api.ts  currency.ts  dates.ts  fonts.ts  journalExport.ts  limits.ts  palette.ts  progress.ts  review.ts  suggestions.ts  types.ts  uid.ts  useRowDrag.ts  useToday.ts
lib/data/: cloud.ts  local.ts  provider.tsx  repo.ts
public/docs/: 404.html  capture.html  completion.html  example-cascade.html  faq.html  idea.html  (+20 more)
(+17 files in other folders)
